Fixing tabs usage Updating styling

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -9,6 +9,7 @@
         "default_title": "Cedar GoLinks"
     },
     "permissions": [
+        "tabs",
         "webNavigation"
     ],
     "host_permissions": [
