--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Cedar GoLinks",
+    "name": "Wiz",
     "version": "1.0.0",
     "description": "Hackathon Project",
     "manifest_version": 3,
